refactor: Modifica banco para o banco H2 em memória, para testes.

--- a/Teste 03/gerencia_pessoas/src/main/resources/application.properties
+++ b/Teste 03/gerencia_pessoas/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciamento-pessoas
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciamento-pessoas
+# spring.datasource.username=postgres
+# spring.datasource.password=admin
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
+# spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:h2:mem:gerencia-pessoas
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=pessoas
+spring.datasource.password=pessoas
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
