--- a/Teste 03/gerencia_pessoas/src/main/resources/application.properties
+++ b/Teste 03/gerencia_pessoas/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.datasource.username=pessoas
 spring.datasource.password=pessoas
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
